add "update item" endpoint with docs
